[package]
name = "ryacron"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
croner = "3.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
tokio-cron-scheduler = "0.15.1"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
